--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!Doctype html>
 <html>
 <head>
   <meta charset="utf-8">
-  <title>MyExeApp</title>
+  <title>首页</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="css/simple-line-icons.css" type="text/css" />
   <link rel="stylesheet" href="css/font.css" type="text/css" />
   <link rel="stylesheet" href="css/app.css" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="css/google-tabs.css">
 </head>
 <body>
   <app-root>Loading...</app-root>
