--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,13 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
-  <link rel="stylesheet" href="css/animate.css" type="text/css" />
-  <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" />
-  <link rel="stylesheet" href="css/simple-line-icons.css" type="text/css" />
-  <link rel="stylesheet" href="css/font.css" type="text/css" />
-  <link rel="stylesheet" href="css/app.css" type="text/css" />
-  <link rel="stylesheet" type="text/css" href="css/google-tabs.css">
+  <link rel="stylesheet" href="./assets/css/bootstrap.css" type="text/css" />
+  <link rel="stylesheet" href="./assets/css/animate.css" type="text/css" />
+  <link rel="stylesheet" href="./assets/css/font-awesome.min.css" type="text/css" />
+  <link rel="stylesheet" href="./assets/css/simple-line-icons.css" type="text/css" />
+  <link rel="stylesheet" href="./assets/css/font.css" type="text/css" />
+  <link rel="stylesheet" href="./assets/css/app.css" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="./assets/css/google-tabs.css">
 
 </head>
 <body>
