--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="./assets/css/font-awesome.min.css" type="text/css" />
-  <link rel="stylesheet" href="./assets/css/font.css" type="text/css" />
+  <!--<link rel="stylesheet" href="./assets/css/font.css" type="text/css" />-->
   <link rel="stylesheet" href="./assets/css/app.css" type="text/css" />
   <link rel="stylesheet" type="text/css" href="./assets/css/google-tabs.css">
 
